I created the fragment "EditStoreFragment".

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@ android:id="@+id/ContainerMain"
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Guardar"
+        android:text="@string/string_guardar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="@dimen/common_padding_default"/>
@@ -23,7 +23,7 @@ android:id="@+id/ContainerMain"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/common_padding_default"
-        android:hint="Nombre de la tienda"
+        android:hint="@string/nombre_de_la_tienda"
         android:autofillHints="name"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
